# uasm

./: Cargo.toml  build.rs  install.sh
arch/: rv32i.arch  rv32im.arch
examples/: omega-arch.txt  risc16.arch  riscv32i.arch  sigma-arch.txt
src/: asm.rs  asm_tests_red.rs  cli.rs  error.rs  expr.rs  from_bytes.rs  grammar.lalrpop  lines.rs  main.rs  parser.rs
test-data/: test1.arch
tests/: arch_cli.rs  asm_rv32i.rs
