[package]
name = "uasm"
version = "0.2.3"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.3"
lalrpop-util = {version = "0.22.0", features = ["lexer"]}
log = "0.4.20"
pretty_env_logger = "0.5.0"

[build-dependencies]
lalrpop = "0.22.0"
